force-app/default/objects/ApplicantAssets__c/ApplicantAssets__c.object-meta.xml
<CustomObject>
    <label>Applicant Assets</label>
    <nameField>
        <label>ApplicantAssets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicant Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>