force-app/default/objects/ApplicantAssets__c/fields/Finance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Amount__c</fullName>
    <formula>Price__c - Down_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>